--- a/public/relatorios.html
+++ b/public/relatorios.html
@@ -56,6 +56,7 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            margin-right: 10px;
         }
         button:hover {
             background-color: #45a049;
@@ -150,17 +151,23 @@
 
         function setDefaultDates() {
             const now = moment();
-            const yesterday = moment().subtract(24, 'hours');
+            const startOfDay = now.clone().startOf('day');
             
             document.getElementById('dataFim').value = now.format('YYYY-MM-DDTHH:mm');
-            document.getElementById('dataInicio').value = yesterday.format('YYYY-MM-DDTHH:mm');
+            document.getElementById('dataInicio').value = startOfDay.format('YYYY-MM-DDTHH:mm');
+        }
+
+        function formatDateForAPI(date) {
+            return moment(date).format('YYYY-MM-DDTHH:mm:ss.SSSZ');
         }
 
         async function fetchOrders() {
             try {
-                const dataInicio = moment(document.getElementById('dataInicio').value).format();
-                const dataFim = moment(document.getElementById('dataFim').value).format();
+                const dataInicio = formatDateForAPI(document.getElementById('dataInicio').value);
+                const dataFim = formatDateForAPI(document.getElementById('dataFim').value);
                 
+                console.log('Buscando pedidos de', dataInicio, 'até', dataFim);
+
                 const response = await axios.get(firebaseFunctionUrl, {
                     headers: {
                         'Authorization': authToken,
@@ -266,6 +273,11 @@
 
         setDefaultDates();
         fetchOrders();
+
+        // Atualizar a data final a cada minuto
+        setInterval(() => {
+            document.getElementById('dataFim').value = moment().format('YYYY-MM-DDTHH:mm');
+        }, 60000);
     </script>
 </body>
 </html>
