--- a/public/admin.html
+++ b/public/admin.html
@@ -72,7 +72,7 @@
             <a href="chatbot.html">Chatbot</a>
             <a href="ganhos.html">Informar Ganhos</a>
             <a href="motoboy-report.html">Entregas Motoboys em Tempo Real</a>
-            <a href="previsao.html">Previsão do Tempo</a>
+            <a href="relatorios.html">Relatorios</a>
             <a href="rastrear.html">Rastrear Pedidos</a>
             <a href="waze.html">Waze</a>
         </div>
