--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -19,28 +19,7 @@
         }
         .container { 
             display: flex; 
-            flex-direction: column;
-            height: 100vh; 
-        }
-        .nav-menu {
-            background-color: #2c3e50;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .nav-menu a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 15px;
-            margin: 0 5px;
-            font-weight: bold;
-        }
-        .nav-menu a:hover {
-            background-color: #34495e;
-            border-radius: 5px;
-        }
-        .content {
-            display: flex;
-            flex-grow: 1;
+            height: 100vh;
         }
         .sidebar { 
             width: 350px; 
@@ -56,16 +35,18 @@
             display: flex; 
             flex-direction: column; 
             padding: 20px;
+            position: relative;
         }
         #map { 
-            flex-grow: 1; 
+            height: 400px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
         }
         .dashboard {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 20px;
+            margin-top: 20px;
         }
         .metric-card {
             background-color: #fff;
@@ -151,44 +132,87 @@
             font-size: 12px;
             margin-top: 5px;
         }
+        .menu-icon {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 24px;
+            cursor: pointer;
+            z-index: 1000;
+        }
+        .side-menu {
+            position: fixed;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            height: 100%;
+            background-color: #2c3e50;
+            transition: 0.3s;
+            z-index: 1001;
+            padding-top: 60px;
+        }
+        .side-menu.active {
+            left: 0;
+        }
+        .side-menu a {
+            padding: 15px 25px;
+            text-decoration: none;
+            font-size: 18px;
+            color: #ecf0f1;
+            display: block;
+            transition: 0.3s;
+        }
+        .side-menu a:hover {
+            background-color: #34495e;
+        }
+        .close-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 24px;
+            color: #ecf0f1;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <nav class="nav-menu">
-            <a href="createorder.html" target="_blank"><i class="fas fa-home"></i> Home</a>
-            <a href="relatorios.html" target="_blank"><i class="fas fa-chart-bar"></i> Relatórios</a>
-            <a href="admin.html" target="_blank"><i class="fas fa-motorcycle"></i> Entregas Motoboys</a>
-            <a href="rastrear.html" target="_blank"><i class="fas fa-map-marker-alt"></i> Rastrear Pedidos</a>
-            <a href="chatbot.html" target="_blank"><i class="fas fa-robot"></i> Chatbot</a>
-        </nav>
-        <div class="content">
-            <div class="sidebar">
-                <h2>Pedidos</h2>
-                <div id="orderList" class="order-list"></div>
-                <button id="resetButton" class="action-button" onclick="resetCounters()">Zerar Contadores</button>
+        <div class="sidebar">
+            <h2>Pedidos</h2>
+            <div id="orderList" class="order-list"></div>
+            <button id="resetButton" class="action-button" onclick="resetCounters()">Zerar Contadores</button>
+        </div>
+        <div class="main-content">
+            <div class="menu-icon" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
             </div>
-            <div class="main-content">
-                <div class="dashboard">
-                    <div class="metric-card">
-                        <div class="metric-title">Total de Pedidos</div>
-                        <div id="totalOrders" class="metric-value">0</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-title">Pedidos em Andamento</div>
-                        <div id="ongoingOrders" class="metric-value">0</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-title">Valor Total</div>
-                        <div id="totalValue" class="metric-value">R$ 0,00</div>
-                        <div id="paymentBreakdown"></div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-title">Tempo Médio de Preparo</div>
-                        <div id="avgPrepTime" class="metric-value">0 min</div>
-                    </div>
+            <div class="side-menu" id="sideMenu">
+                <span class="close-btn" onclick="toggleMenu()">&times;</span>
+                <a href="createorder.html" target="_blank"><i class="fas fa-home"></i> Home</a>
+                <a href="relatorios.html" target="_blank"><i class="fas fa-chart-bar"></i> Relatórios</a>
+                <a href="admin.html" target="_blank"><i class="fas fa-motorcycle"></i> Entregas Motoboys</a>
+                <a href="rastrear.html" target="_blank"><i class="fas fa-map-marker-alt"></i> Rastrear Pedidos</a>
+                <a href="chatbot.html" target="_blank"><i class="fas fa-robot"></i> Chatbot</a>
+            </div>
+            <div id="map"></div>
+            <div class="dashboard">
+                <div class="metric-card">
+                    <div class="metric-title">Total de Pedidos</div>
+                    <div id="totalOrders" class="metric-value">0</div>
                 </div>
-                <div id="map"></div>
+                <div class="metric-card">
+                    <div class="metric-title">Pedidos em Andamento</div>
+                    <div id="ongoingOrders" class="metric-value">0</div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-title">Valor Total</div>
+                    <div id="totalValue" class="metric-value">R$ 0,00</div>
+                    <div id="paymentBreakdown"></div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-title">Tempo Médio de Preparo</div>
+                    <div id="avgPrepTime" class="metric-value">0 min</div>
+                </div>
             </div>
         </div>
     </div>
@@ -227,6 +251,10 @@
             online: 0
         };
         let currentOrders = [];
+
+        function toggleMenu() {
+            document.getElementById('sideMenu').classList.toggle('active');
+        }
 
         function initMap() {
             const centerAddress = { lat: -5.750636, lng: -35.254625 };
@@ -271,9 +299,7 @@
                     }
                 });
                 
-                currentOrders = response.data.filter(order => 
-                    ['open', 'accepted', 'onGoing', 'ready', 'dispatched'].includes(order.status)
-                );
+                currentOrders = response.data;
                 updateOrderList(currentOrders);
                 updateMap(currentOrders);
                 updateDashboard(currentOrders);
@@ -307,7 +333,7 @@
             });
         }
 
-        function updateMap(orders) {
+function updateMap(orders) {
             Object.keys(markers).forEach(key => {
                 markers[key].setMap(null);
             });
@@ -341,7 +367,7 @@
             heatmap.setData(heatmapData);
         }
 
-function getOrderMarkerIcon(status, orderId) {
+        function getOrderMarkerIcon(status, orderId) {
             let color;
             switch (status) {
                 case 'open': color = '#e74c3c'; break;
