--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -111,7 +111,7 @@
             margin-top: 10px;
         }
         .status-open { color: #e74c3c; }
-        .status-accepted { color: #f1c40f; }
+        .status-accepted { color: #FFFF00; }
         .status-ready { color: #8E44AD; }
         .status-onGoing { color: #87CEEB; }
         .status-dispatched { color: #e67e22; }
@@ -352,7 +352,7 @@
             let color;
             switch (status) {
                 case 'open': color = '#e74c3c'; break;
-                case 'accepted': color = '#f1c40f'; break;
+                case 'accepted': color = '#FFFF00'; break;
                 case 'ready': color = '#8E44AD'; break;
                 case 'onGoing': color = '#87CEEB'; break;
                 case 'dispatched': color = '#e67e22'; break;
