--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -136,6 +136,39 @@
         .label {
             color: #4a4a4a;
         }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 600px;
+            border-radius: 8px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -164,6 +197,13 @@
                     <div id="courierDeliveries"></div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div id="ongoingModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="ongoingContent"></div>
         </div>
     </div>
 
@@ -307,7 +347,7 @@
             }
         }
 
-        function updateOrderList(orders) {
+function updateOrderList(orders) {
             const orderList = document.getElementById('orderList');
             orderList.innerHTML = '';
             orders.forEach(order => {
@@ -318,7 +358,7 @@
                     <p class="status-${order.status.toLowerCase()}">${getStatusDisplay(order.status)}</p>
                     <p>Cliente: ${order.customer.customerName}</p>
                     ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
- <p>Método de Pagamento: ${translatePaymentMethod(order.paymentMethod)}</p>
+                    <p>Método de Pagamento: ${translatePaymentMethod(order.paymentMethod)}</p>
                     <p>Total do Pedido: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
                     ${order.notes ? `<p>Observações: ${order.notes}</p>` : ''}
                     <p>Tempo de Preparo: <span id="prepTime-${order.id}">0 min</span></p>
@@ -582,21 +622,83 @@
         }
 
         function updateCourierDeliveries(allOrders) {
+            const today = new Date();
+            today.setHours(0, 0, 0, 0);
+            
             courierDeliveries = {};
+            const ongoingDeliveries = {};
+
             allOrders.forEach(order => {
-                if (order.courier && (order.status === 'delivered' || order.status === 'onGoing')) {
+                if (order.courier && new Date(order.creationDate) >= today) {
                     const courierName = order.courier.courierName;
-                    courierDeliveries[courierName] = (courierDeliveries[courierName] || 0) + 1;
+                    if (order.status === 'closed' || order.status === 'delivered') {
+                        courierDeliveries[courierName] = (courierDeliveries[courierName] || 0) + 1;
+                    } else if (order.status === 'onGoing') {
+                        if (!ongoingDeliveries[courierName]) {
+                            ongoingDeliveries[courierName] = [];
+                        }
+                        ongoingDeliveries[courierName].push(order);
+                    }
                 }
             });
 
             const courierDeliveriesElement = document.getElementById('courierDeliveries');
             courierDeliveriesElement.innerHTML = '';
             for (const [courierName, deliveries] of Object.entries(courierDeliveries)) {
-                courierDeliveriesElement.innerHTML += `<p>${courierName}: ${deliveries} entrega${deliveries > 1 ? 's' : ''}</p>`;
+                const ongoingCount = ongoingDeliveries[courierName] ? ongoingDeliveries[courierName].length : 0;
+                courierDeliveriesElement.innerHTML += `
+                    <div>
+                        <span>${courierName}: ${deliveries} entrega${deliveries !== 1 ? 's' : ''} finalizadas</span>
+                        ${ongoingCount > 0 ? `
+                            <span> | ${ongoingCount} em andamento</span>
+                            <button onclick="showOngoingDeliveries('${courierName}')">Ver</button>
+                        ` : ''}
+                    </div>
+                `;
             }
 
             saveDataToLocalStorage();
+        }
+
+function showOngoingDeliveries(courierName) {
+            const ongoingDeliveries = allOrdersToday.filter(order => 
+                order.courier && 
+                order.courier.courierName === courierName && 
+                order.status === 'onGoing'
+            );
+
+            let content = `<h3>Pedidos em andamento de ${courierName}</h3>`;
+            if (ongoingDeliveries.length === 0) {
+                content += '<p>Nenhum pedido em andamento.</p>';
+            } else {
+                content += '<ul>';
+                ongoingDeliveries.forEach(order => {
+                    content += `
+                        <li>
+                            Pedido #${order.id} - ${order.customer.customerName}
+                            <br>Endereço: ${order.deliveryPoint.address}
+                            <br>Valor: R$ ${order.orderTotal.toFixed(2)}
+                        </li>
+                    `;
+                });
+                content += '</ul>';
+            }
+
+            const modal = document.getElementById('ongoingModal');
+            const modalContent = document.getElementById('ongoingContent');
+            modalContent.innerHTML = content;
+            modal.style.display = 'block';
+
+            const closeSpan = modal.querySelector('.close');
+            closeSpan.onclick = function() {
+                modal.style.display = 'none';
+            }
+
+            window.onclick = function(event) {
+                if (event.target == modal) {
+                    modal.style.display = 'none';
+                }
+            }
         }
 
         function resetCounters() {
@@ -620,10 +722,23 @@
             saveDataToLocalStorage();
         }
 
+        // Inicialização da aplicação
         loadDataFromLocalStorage();
         initMap();
         fetchOrders();
         setInterval(fetchOrders, 10000); // Atualiza a cada 10 segundos
+
+        // Configuração do modal
+        const modal = document.getElementById('ongoingModal');
+        const closeSpan = modal.querySelector('.close');
+        closeSpan.onclick = function() {
+            modal.style.display = 'none';
+        }
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = 'none';
+            }
+        }
     </script>
 </body>
 </html>
