--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -59,6 +59,7 @@
             font-size: 14px;
             color: #4a4a4a;
             margin-bottom: 5px;
+            font-weight: bold;
         }
         .metric-value {
             font-size: 18px;
@@ -168,6 +169,43 @@
             color: #000;
             text-decoration: none;
             cursor: pointer;
+        }
+        .courier-name {
+            font-weight: bold;
+            color: #3498db;
+        }
+        .courier-deliveries {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border-radius: 5px;
+        }
+        .view-button {
+            background-color: #2ecc71;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 12px;
+            margin-left: 10px;
+        }
+        .view-button:hover {
+            background-color: #27ae60;
+        }
+        .ongoing-orders-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        .ongoing-order-item {
+            background-color: #ecf0f1;
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .ongoing-order-item h4 {
+            margin: 0 0 5px 0;
+            color: #2c3e50;
         }
     </style>
 </head>
@@ -317,7 +355,7 @@
                 const startDate = formatDate(new Date(now.setHours(0,0,0,0)));
                 const endDate = formatDate(new Date());
                 
-                const response = await axios.get(firebaseFunctionUrl, {
+ const response = await axios.get(firebaseFunctionUrl, {
                     headers: {
                         'Authorization': authToken,
                         'Content-Type': 'application/json;charset=UTF-8'
@@ -347,7 +385,7 @@
             }
         }
 
-function updateOrderList(orders) {
+        function updateOrderList(orders) {
             const orderList = document.getElementById('orderList');
             orderList.innerHTML = '';
             orders.forEach(order => {
@@ -357,7 +395,7 @@ function updateOrderList(orders) {
                     <h3>Pedido #${order.id}</h3>
                     <p class="status-${order.status.toLowerCase()}">${getStatusDisplay(order.status)}</p>
                     <p>Cliente: ${order.customer.customerName}</p>
-                    ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
+                    ${order.courier ? `<p>Motoboy: <span class="courier-name">${order.courier.courierName}</span></p>` : ''}
                     <p>Método de Pagamento: ${translatePaymentMethod(order.paymentMethod)}</p>
                     <p>Total do Pedido: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
                     ${order.notes ? `<p>Observações: ${order.notes}</p>` : ''}
@@ -526,7 +564,7 @@ function updateOrderList(orders) {
                         <p>Cliente: ${order.customer.customerName}</p>
                         <p>Endereço: ${order.deliveryPoint.address}</p>
                         <p>Status: ${getStatusDisplay(order.status)}</p>
-                        ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
+                        ${order.courier ? `<p>Motoboy: <span class="courier-name">${order.courier.courierName}</span></p>` : ''}
                         <p>Método de Pagamento: ${translatePaymentMethod(order.paymentMethod)}</p>
                         <p>Total do Pedido: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
                         ${order.notes ? `<p>Observações: ${order.notes}</p>` : ''}
@@ -545,7 +583,7 @@ function updateOrderList(orders) {
             const infoWindow = new google.maps.InfoWindow({
                 content: `
                     <div style="max-width: 200px;">
-                        <h3>Motoboy - ${order.courier.courierName}</h3>
+                        <h3>Motoboy - <span class="courier-name">${order.courier.courierName}</span></h3>
                         <p>Status: ${getStatusDisplay(order.status)}</p>
                         ${tracking.pointsToDelivery && tracking.pointsToDelivery.length > 0 ? 
                             `<p>Posição na rota: ${tracking.pointsToDelivery[0].position}</p>` : ''}
@@ -628,7 +666,7 @@ function updateOrderList(orders) {
             courierDeliveries = {};
             const ongoingDeliveries = {};
 
-            allOrders.forEach(order => {
+allOrders.forEach(order => {
                 if (order.courier && new Date(order.creationDate) >= today) {
                     const courierName = order.courier.courierName;
                     if (order.status === 'closed' || order.status === 'delivered') {
@@ -647,11 +685,12 @@ function updateOrderList(orders) {
             for (const [courierName, deliveries] of Object.entries(courierDeliveries)) {
                 const ongoingCount = ongoingDeliveries[courierName] ? ongoingDeliveries[courierName].length : 0;
                 courierDeliveriesElement.innerHTML += `
-                    <div>
-                        <span>${courierName}: ${deliveries} entrega${deliveries !== 1 ? 's' : ''} finalizadas</span>
+                    <div class="courier-deliveries">
+                        <span class="courier-name">${courierName}</span>: 
+                        <strong>${deliveries}</strong> entrega${deliveries !== 1 ? 's' : ''} finalizadas
                         ${ongoingCount > 0 ? `
-                            <span> | ${ongoingCount} em andamento</span>
-                            <button onclick="showOngoingDeliveries('${courierName}')">Ver</button>
+                            | <strong>${ongoingCount}</strong> em andamento
+                            <button class="view-button" onclick="showOngoingDeliveries('${courierName}')">Ver</button>
                         ` : ''}
                     </div>
                 `;
@@ -660,24 +699,25 @@ function updateOrderList(orders) {
             saveDataToLocalStorage();
         }
 
-function showOngoingDeliveries(courierName) {
+        function showOngoingDeliveries(courierName) {
             const ongoingDeliveries = allOrdersToday.filter(order => 
                 order.courier && 
                 order.courier.courierName === courierName && 
                 order.status === 'onGoing'
             );
 
-            let content = `<h3>Pedidos em andamento de ${courierName}</h3>`;
+            let content = `<h3>Pedidos em andamento de <span class="courier-name">${courierName}</span></h3>`;
             if (ongoingDeliveries.length === 0) {
                 content += '<p>Nenhum pedido em andamento.</p>';
             } else {
-                content += '<ul>';
+                content += '<ul class="ongoing-orders-list">';
                 ongoingDeliveries.forEach(order => {
                     content += `
-                        <li>
-                            Pedido #${order.id} - ${order.customer.customerName}
-                            <br>Endereço: ${order.deliveryPoint.address}
-                            <br>Valor: R$ ${order.orderTotal.toFixed(2)}
+                        <li class="ongoing-order-item">
+                            <h4>Pedido #${order.id}</h4>
+                            <p>Cliente: ${order.customer.customerName}</p>
+                            <p>Endereço: ${order.deliveryPoint.address}</p>
+                            <p>Valor: R$ ${order.orderTotal.toFixed(2)}</p>
                         </li>
                     `;
                 });
@@ -688,17 +728,6 @@ function showOngoingDeliveries(courierName) {
             const modalContent = document.getElementById('ongoingContent');
             modalContent.innerHTML = content;
             modal.style.display = 'block';
-
-            const closeSpan = modal.querySelector('.close');
-            closeSpan.onclick = function() {
-                modal.style.display = 'none';
-            }
-
-            window.onclick = function(event) {
-                if (event.target == modal) {
-                    modal.style.display = 'none';
-                }
-            }
         }
 
         function resetCounters() {
