--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -126,6 +126,7 @@
             font-size: 16px;
             margin-top: 10px;
             transition: background-color 0.3s ease;
+            width: 100%;
         }
         .action-button:hover {
             background-color: #2980b9;
@@ -215,6 +216,7 @@
             <h2>Pedidos</h2>
             <div id="orderList" class="order-list"></div>
             <button id="resetButton" class="action-button" onclick="resetCounters()">Zerar Contadores</button>
+            <button id="reportsButton" class="action-button" onclick="window.location.href='relatorios.html'">Relatórios</button>
         </div>
         <div class="main-content">
             <div id="map"></div>
